# termi-cheat

./: pyproject.toml  setup.py  termi-cheat.py
cheats/: docker.json  git.json
src/cheats/: linux.json
src/termi_cheat/: cli.py  core.py  init.py
