[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_metadata"

[project]
name = "termi-cheat"
version = "1.0.0"
description = "Termi-Cheat - Cheatsheets de comandos para terminal"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Tu Nombre", email = "tu.email@ejemplo.com"}
]
keywords = ["cheatsheet", "terminal", "commands", "reference"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]

[project.scripts]
termi-cheat = "termi_cheat.cli:main"
tcheat = "termi_cheat.cli:main"

[project.urls]
Homepage = "https://github.com/tuusuario/termi-cheat"
Repository = "https://github.com/tuusuario/termi-cheat"
"Bug Tracker" = "https://github.com/tuusuario/termi-cheat/issues"